--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
   "name": "profile-page",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "homepage": "profile/",
   "private": true,
   "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-scripts": "5.0.1", 
+    "styled-components": "^5.3.5",
+    "web-vitals": "^2.1.0",
+    "ci": "^2.2.0"
+  },
+  "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -11,12 +20,8 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "ci": "^2.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "@types/styled-components": "^5.1.26",
+    "typescript": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
